--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
                 </div>
             </div>
         </div>
-        <div class="header__middle pt-20" style="
+        <div class="header__middle pt-1" style="
     background-color: burlywood;
 ">
             <div class="container">
                 <div class="row">
                     <div
                         class="col-lg-4 col-md-3 d-flex align-items-center justify-content-md-start justify-content-center">
-                        <div class="header__logo text-center text-md-left mb-20">
-                            <a href="#"><img src="logo.png" alt="Header Logo" width="255"></a>
+                        <div class="header__logo text-center text-md-left">
+                            <a href="#"><img src="logo.png" alt="Header Logo" width="155"></a>
                             <div class="row">
                                 <div class="col-xl-12">
                                     <div class="breaking__meta mt-2">
@@ -79,7 +79,7 @@
                     </div>
 
                     <div class="col-lg-8 col-md-9">
-                        <div class="header__add text-center text-md-right mb-20">
+                        <div class="header__add text-center text-md-right " style="padding-bottom: 2px;">
                             <a href="#"><img src="assets/img/add/header-add.jpg" alt=""></a>
                         </div>
                     </div>
@@ -317,7 +317,7 @@
 
     <main>
         <!-- breaking start -->
-        <section class="breaking pt-2 pb-2">
+        <section class="breaking" style="padding-bottom: 1px;padding-top: 1px;">
             <div class="container">
 
                 <div class="row">
@@ -350,10 +350,10 @@
                 <div class="row">
                     <div class="col-lg-12" style="background-color: burlywood;">
                         <div class="row">
-                            <div class="col-lg-3 col-md-12 pr-0">
+                            <div class="col-lg-3 col-md-12" style="padding-right: 1px;">
                                 <div class="hero pos-relative">
                                     <div class="hero__thumb" data-overlay="dark-gradient">
-                                        <a href="#"><img src="img\top\ShowImage (1).jpg" style="height: 205px;"
+                                        <a href="#"><img src="img\top\ShowImage (1).jpg" style="height: 165px;"
                                                 alt="hero image"></a>
                                     </div>
                                     <div class="hero__text">
@@ -362,11 +362,11 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-6 pr-0">
+                            <div class="col-lg-3 col-md-6" style="padding-right: 1px;padding-left: 1px;">
                                 <div class="hero pos-relative">
                                     <div class="hero__thumb" data-overlay="dark-gradient">
                                         <a href="#">
-                                            <img src="img\top\ShowImage (2).jpg" style="height: 203px;"
+                                            <img src="img\top\ShowImage (2).jpg" style="height: 165px;"
                                                 alt="hero image">
                                         </a>
                                     </div>
@@ -380,11 +380,11 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-md-6 ">
+                            <div class="col-lg-3 col-md-6" style="padding-right: 1px;padding-left: 1px;">
                                 <div class="hero pos-relative">
                                     <div class="hero__thumb" data-overlay="dark-gradient">
                                         <a href="#">
-                                            <img src="img\top\ShowImage (2).jpg" style="height: 202px;"
+                                            <img src="img\top\ShowImage (2).jpg" style="height: 165px;"
                                                 alt="hero image">
                                         </a>
                                     </div>
@@ -402,7 +402,7 @@
                                 <div class="hero pos-relative">
                                     <div class="hero__thumb" data-overlay="dark-gradient">
                                         <a href="#">
-                                            <img src="img\top\ShowImage (2).jpg" style="height: 202px;"
+                                            <img src="img\top\ShowImage (2).jpg" style="height: 165px;"
                                                 alt="hero image">
                                         </a>
                                     </div>
@@ -3532,7 +3532,7 @@
                 </div>
             </div>
         </div>
-        <div class="copyright-area pt-3 pb-3">
+        <div class="copyright-area" style="padding-top: 5px;">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-6">
