--- a/index.html
+++ b/index.html
@@ -1033,6 +1033,28 @@
                 </div>
             </div>
         </section>
+        <div class="s-content__pagenav mt-60">
+            <div class="s-content__nav">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="s-content__prev mb-30">
+                            <a href="#0" rel="prev">
+                                <span>Previous Post</span>
+                                होटल व्यापारी और उद्योगपति हिमाचल में निवेश करें - मुख्यमंत्री
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="s-content__next mb-30 text-left text-md-right">
+                            <a href="#0" rel="next">
+                                <span>Next Post</span>
+                                मेघालय के दोबारा मुख्यमंत्री बने कोनराड संगमा
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <section class="features-area pb-30">
             <div class="container">
