--- a/post-details.html
+++ b/post-details.html
@@ -527,11 +527,11 @@
                                     was evening which gathered fourth sixth. Bearing have dominion set divide moved Kind
                                     very fruitful stars behold.</p> -->
                             </div>
-                            <div class="s-content__pagenav mt-60">
+                            <div class="s-content__pagenav">
                                 <div class="s-content__nav">
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <div class="s-content__prev mb-30">
+                                            <div class="s-content__prev">
                                                 <a href="#0" rel="prev">
                                                     <span>Previous Post</span>
                                                     होटल व्यापारी और उद्योगपति हिमाचल में निवेश करें - मुख्यमंत्री
@@ -539,7 +539,7 @@
                                             </div>
                                         </div>
                                         <div class="col-md-6">
-                                            <div class="s-content__next mb-30 text-left text-md-right">
+                                            <div class="s-content__next text-left text-md-right">
                                                 <a href="#0" rel="next">
                                                     <span>Next Post</span>
                                                     मेघालय के दोबारा मुख्यमंत्री बने कोनराड संगमा
@@ -559,7 +559,7 @@
                                     <button>Print</button>
                                 </div>
                                 <div class="col-lg-8">
-                                    <h4 class="text-right mt-5" style="font-weight: 600;">'थर्ड आई वर्ल्ड न्यूज़' अब
+                                    <h4 class="text-right mt-3" style="font-weight: 600;">'थर्ड आई वर्ल्ड न्यूज़' अब
                                         सोशल मीडिया पर</h4>
                                     <div class="share-post-link mb-1 mt-2 text-right">
                                         <a class="facebook" href="#">
@@ -587,11 +587,11 @@
                                 </div>
                             </div>
 
-                            <div class="post-comments-form mt-40 mb-40">
+                            <!-- <div class="post-comments-form mt-40 mb-40">
                                 <div class="section-title mb-30">
                                     <h2>Recent Comments</h2>
                                 </div>
-                                <!-- <form action="#">
+                                <form action="#">
                                     <div class="row">
                                         <div class="col-xl-6">
                                             <input type="text" placeholder="Your Name">
@@ -605,10 +605,10 @@
                                             <button class="btn brand-btn" type="submit">Send message</button>
                                         </div>
                                     </div>
-                                </form> -->
-                            </div>
+                                </form>
+                            </div> -->
 
-                            <div class="post-comments mt-30">
+                            <div class="post-comments mt-2">
                                 <div class="section-title mb-30">
                                     <h2>Recent Comments</h2>
                                 </div>
@@ -979,6 +979,34 @@
                                     <a href="#">Next</a>
                                 </li>
                             </ul>
+                        </div>
+                        <div class="section-title" style="">
+                            <h2 style="background-color: burlywood;padding: 4px;">Third Eye World news Channel</h2>
+                        </div>
+                        <div class="postbox">
+
+                            <iframe width="100%" height="235" src="https://www.youtube.com/embed/O10G_YECVuM"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                allowfullscreen=""></iframe>
+                            <h4 class=" pr-0 title-18" style="
+    margin-top: 54px;
+    background-color: #f0b15d;
+">
+                                प्रधानमंत्री मोदी करोड़ रुपये...
+                            </h4>
+
+                        </div>
+                        <div class="postbox">
+                            <div class="postbox__thumb">
+
+                                <a href="#">
+                                    <img src="img/ShowImage.gif" alt="hero image" style="
+    height: 231px;
+">
+                                </a>
+                            </div>
+                            
                         </div>
                     </div>
                 </div>
@@ -3562,7 +3590,7 @@
     </div> -->
 
 
-    <div class="whatsapp-chat">
+    <!-- <div class="whatsapp-chat">
         <input type="checkbox" id="whatsapp-chat-toggler" class="whatsapp-chat-toggler">
 
         <label for="whatsapp-chat-toggler" class="whatsapp-chat-backdrop"></label>
@@ -3666,14 +3694,14 @@
             <img src="img\play-svgrepo-com.svg" alt="">
         </label> -->
 
-        <label for="whatsapp-chat-toggler" class="whatsapp-chat-button ">
+        <!-- <label for="whatsapp-chat-toggler" class="whatsapp-chat-button ">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                     d="M20.4054 3.4875C18.1607 1.2375 15.1714 0 11.9946 0C5.4375 0 0.101786 5.33571 0.101786 11.8929C0.101786 13.9875 0.648214 16.0339 1.6875 17.8393L0 24L6.30536 22.3446C8.04107 23.2929 9.99643 23.7911 11.9893 23.7911H11.9946C18.5464 23.7911 24 18.4554 24 11.8982C24 8.72143 22.65 5.7375 20.4054 3.4875ZM11.9946 21.7875C10.2161 21.7875 8.475 21.3107 6.95893 20.4107L6.6 20.1964L2.86071 21.1768L3.85714 17.5286L3.62143 17.1536C2.63036 15.5786 2.11071 13.7625 2.11071 11.8929C2.11071 6.44464 6.54643 2.00893 12 2.00893C14.6411 2.00893 17.1214 3.0375 18.9857 4.90714C20.85 6.77679 21.9964 9.25714 21.9911 11.8982C21.9911 17.3518 17.4429 21.7875 11.9946 21.7875ZM17.4161 14.3839C17.1214 14.2339 15.6589 13.5161 15.3857 13.4196C15.1125 13.3179 14.9143 13.2696 14.7161 13.5696C14.5179 13.8696 13.95 14.5339 13.7732 14.7375C13.6018 14.9357 13.425 14.9625 13.1304 14.8125C11.3839 13.9393 10.2375 13.2536 9.08571 11.2768C8.78036 10.7518 9.39107 10.7893 9.95893 9.65357C10.0554 9.45536 10.0071 9.28393 9.93214 9.13393C9.85714 8.98393 9.2625 7.52143 9.01607 6.92679C8.775 6.34821 8.52857 6.42857 8.34643 6.41786C8.175 6.40714 7.97679 6.40714 7.77857 6.40714C7.58036 6.40714 7.25893 6.48214 6.98571 6.77679C6.7125 7.07679 5.94643 7.79464 5.94643 9.25714C5.94643 10.7196 7.0125 12.1339 7.15714 12.3321C7.30714 12.5304 9.25179 15.5304 12.2357 16.8214C14.1214 17.6357 14.8607 17.7054 15.8036 17.5661C16.3768 17.4804 17.5607 16.8482 17.8071 16.1518C18.0536 15.4554 18.0536 14.8607 17.9786 14.7375C17.9089 14.6036 17.7107 14.5286 17.4161 14.3839Z"
                     fill="currentColor" />
             </svg>
-        </label>
-    </div>
+        </label> -->
+    <!-- </div> -->
 
     <style>
         :root {
